# UMInizer

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/UMInizer/: UMInizer.py
test_data/: interleaved.fastq
