[metadata]
name = UMInizer
version = 0.0.1
description = 
long_description = file: README.md
author = Matthias De Smet
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers = 
    Environment :: Console
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering

[options]
packages = UMInizer
package_dir = 
    =src

python_requires= >=3.6
install_requires = 
    click
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
    console_scripts = 
        UMInizer = UMInizer.UMInizer:uminizer
